fix misc spacing issues

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
@@ -2,6 +2,7 @@
 @import "../fonts/font-awesome/css/font-awesome.min.css";
 
 .button-holder {
+	margin-bottom: 20px;
 	overflow: visible;
 }
 
@@ -20,6 +21,14 @@
 	}
 
 	/* forms, inputs, and labels */
+
+	form {
+		.accordion-heading {
+			.accordion-toggle {
+				padding-left: 0;
+			}
+		}
+	}
 
 	input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"], select, textarea, .uneditable-input {
 		border: 1px solid #DDD;
@@ -57,8 +66,28 @@
 		margin: 0 0 11px 0px;
 	}
 
+	.btn-link {
+		color: #555;
+		text-decoration: none;
+
+		&:focus, &:hover {
+			text-decoration: none;
+		}
+
+		> i {
+			height: auto;
+			margin: 0;
+			padding: 0;
+			width: auto;
+		}
+	}
+
 	.control-group {
 		margin-bottom: 30px;
+	}
+
+	.input-append {
+		padding-right: 12px;
 	}
 
 	/* Main */
@@ -320,29 +349,6 @@
 		border-width: 1px 0;
 	}
 
-	/* add class .minimal to liferay-ui:panel-container to remove default accordion styles */
-
-	.accordion.minimal {
-		.accordion-group {
-			border: 0;
-
-			.accordion-heading {
-				&.toggler-header-collapsed {
-					background: none;
-				}
-
-				&.toggler-header-expanded {
-					background: none;
-				}
-			}
-		}
-
-		.accordion-inner {
-			border: 0;
-			overflow: auto;
-		}
-	}
-
 	.accordion-group {
 		border-width: 0;
 
@@ -400,6 +406,7 @@
 						color: #999;
 						font-size: 11px;
 						font-weight: bold;
+						padding-left: 8px;
 						text-transform: uppercase;
 
 						&:after, &:before {
