--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -654,6 +654,18 @@ $dockbarOpenGradientEnd: #048BDF;
 		}
 	}
 
+	/* Vocabularies select box in sites categories */
+
+	.portlet-asset-category-admin {
+		.categories-admin-select-search {
+			margin: 0 10px 0 0;
+		}
+
+		.control-group {
+			margin-bottom: 0;
+		}
+	}
+
 	/* ---------- My Account Popup ---------- */
 
 	button {
